# AudioPlayground

./: .gitignore
VitisHlsWS/: PerformanceResourceEstimates.csv  PerformanceResourceEstimates2.csv  PerformanceResourceEstimatesMultiSine1.csv
VitisHlsWS/MultiSine/: DataTypes.h  MultiSine.cpp  MultiSine.h  MultiSineTB.cpp  compile_commands.json  hls_config.cfg  vitis-comp.json
VitisHlsWS/MultiSineMaster/: DataTypes.h  MultiSineMaster.cpp  MultiSineMaster.h  MultiSineMasterTB.cpp  compile_commands.json  hls_config.cfg  vitis-comp.json
VitisHlsWS/MultiSineStream/: MultiSineStream.cpp  MultiSineStream.h  MultiSineStreamTB.cpp  compile_commands.json  hls_config.cfg  vitis-comp.json
VitisHlsWS/SimpleSine/: DataTypes.h  SimpleSine.cpp  SimpleSine.h  SimpleSineTB.cpp  compile_commands.json  hls_config.cfg  vitis-comp.json
VitisHlsWS/SimpleSineMaster/: SimpleSineMaster.cpp  SimpleSineMaster.h  SimpleSineMasterTB.cpp  compile_commands.json  hls_config.cfg  vitis-comp.json
VitisHlsWS/SimpleSineStream/: DataTypes.h  SimpleSineStream.cpp  SimpleSineStream.h  SimpleSineStreamTB.cpp  compile_commands.json  hls_config.cfg  vitis-comp.json
VitisHlsWS/SimpleSineStreamBidirectional/: SimpleSineStreamBidirectional.cpp  SimpleSineStreamBidirectional.h  SimpleSineStreamBidirectionalTB.cpp  compile_commands.json  (+2 more)
VitisWS/: .analytics
VitisWS/AudioPlatformStandalone/hw/drivers/MultiSineMaster_v1_0/src/: CMakeLists.txt
VivadoProject/: AudioPlatform_wrapper.xsa  AudioPlatform_wrapper_06_46.xsa  AudioPlatform_wrapper_06_51.xsa  AudioPlayground.xsa  VivadoProject.xpr
(+1106 files in other folders)
